plugins {
    id 'java-library'
    id "ch.ergon.gradle.goodies.versioning"
}

group 'ch.ergon.adam'
description 'The jOOQ plugin for ADAM'

sourceCompatibility = 21

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
    api project(':core')
    api group: 'org.jooq', name: 'jooq', version: '3.19.11'
}

apply from: "${rootProject.projectDir}/publish.gradle"
apply from: "${rootProject.projectDir}/common.gradle"
